# Mega_Store_sistema-de-busca

./: Cargo.toml  README.md
src/: lib.rs  main.rs  modelos.rs  motor.rs
tests/: integracao.rs
